test with Jasmine

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Testing</title>
   </head>
   <body>
+    <h1>Unit test</h1>
     <script type="module" src="./main.mjs"></script>
   </body>
 </html>
